# cmake-survival-guide

./: CMakeLists.txt  Config.h.in  README.md  tutorial.cpp
MathFunctions/: MathFunctions.cpp  mysqrt.h
